baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__02_parser__unclosed_string.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Test"
    L_BRACE "{"
    FIELD
      WORD "field1"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "closed string"
            QUOTE """
            WORD "closed"
            WORD "string"
            QUOTE """
          R_PAREN ")"
    FIELD
      WORD "field2"
      TYPE_EXPR "string"
        WORD "string"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "unclosed string
  field3 string @alias("
            QUOTE """
            WORD "unclosed"
            WORD "string"
            WORD "field3"
            WORD "string"
            AT "@"
            WORD "alias"
            L_PAREN "("
            QUOTE """
    FIELD
      WORD "another"
      TYPE_EXPR "closed"
        WORD "closed"
    FIELD
      WORD "string"
      TYPE_EXPR
        STRING_LITERAL ")  // Should still parse this
}
          QUOTE """
          R_PAREN ")"
          SLASH "/"
          SLASH "/"
          WORD "Should"
          WORD "still"
          WORD "parse"
          WORD "this"
          R_BRACE "}"

=== ERRORS ===
Error: Expected ')', found identifier
   ╭─[ unclosed_string.baml:4:25 ]
   │
 4 │   field3 string @alias("another closed string")  // Should still parse this
   │                         ───┬───  
   │                            ╰───── Expected ')', found identifier
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected Unclosed string literal, found EOF
   ╭─[ unclosed_string.baml:5:2 ]
   │
 5 │ }
   │  ┬  
   │  ╰── Expected Unclosed string literal, found EOF
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected '}', found EOF
   ╭─[ unclosed_string.baml:5:2 ]
   │
 5 │ }
   │  ┬  
   │  ╰── Expected '}', found EOF
   │ 
   │ Note: Error code: E0010
───╯
